<resources>
    <string name="app_name">Epayco SDK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Listar Bancos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Tokenizar</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="customer_list">Customer list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plans_list">Plans list</string>
    <string name="subscriptions_list">Subscription list</string>
    <string name="number">Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvc">CVC</string>
    <string name="enviar">Enviar</string>
    <string name="customer_create">Create customer</string>
    <string name="TokenId">TokenID</string>
    <string name="Name">Name</string>
    <string name="defaul_card">Default card</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="customerId">Customer ID</string>
    <string name="customer_detail">Customer detail</string>
    <string name="customer_delete_token">Delete token Customer</string>
    <string name="customer_add_token_Default">"Add Token Default "</string>
    <string name="franchise">franchise</string>
    <string name="mask">mask</string>
    <string name="customer_add_token">Add new Token to Customer</string>
    <string name="plans_create">Create plan</string>
    <string name="planId">plan ID</string>
    <string name="description">description</string>
    <string name="Amount">Amount</string>
    <string name="Currency">Currency</string>
    <string name="Interval">Interval</string>
    <string name="IntervalCount">Interval Count</string>
    <string name="TrialDays">Trial Days</string>
    <string name="plans_detail">Detail Plan</string>
    <string name="subscriptions_create">Create Subscription</string>
    <string name="docType">docType</string>
    <string name="docNumber">docNumber</string>
    <string name="urlConfirmation">URL confirmation</string>
    <string name="subscriptionsId">Subscription ID</string>
    <string name="subscriptions_detail">Subscription Detail</string>
    <string name="subscriptions_pay">Pay Subscription</string>
    <string name="ip">IP</string>
    <string name="bank">Bank</string>
    <string name="typePerson">TypePerson</string>
    <string name="LastName">LastName</string>
    <string name="invoice">Invoice</string>
    <string name="value">Value</string>
    <string name="tax">Tax</string>
    <string name="taxBase">Tax Base</string>
    <string name="country">Country</string>
    <string name="urlResponse">URL response</string>
    <string name="extra">extra</string>
    <string name="city">city</string>
    <string name="depto">Depto</string>
    <string name="address">Address</string>
    <string name="refPayco">ref_payco</string>
    <string name="pse_create">Create trx PSE</string>
    <string name="pse_detail">Detail TRX PSE</string>
    <string name="splitpayment">splitpayment</string>
    <string name="split_app_id">split app id</string>
    <string name="split_merchant_id">split merchant id</string>
    <string name="split_type">split type</string>
    <string name="split_primary_receiver">split primary receiver</string>
    <string name="split_primary_receiver_fee">split primary receiver fee</string>
    <string name="cash_create">Create TRX Cash</string>
    <string name="type">type</string>
    <string name="endDate">End Date</string>
    <string name="cash_detail">Detail TRX Cash</string>
    <string name="dues">dues</string>
    <string name="ico">ico</string>
    <string name="plans_delete">Delete Plan</string>
    <string name="document">Document</string>
    <string name="indCountry">ind country</string>
    <string name="methodConfirmation">Method Confirmation</string>
    <string name="idSessionToken">Is Session Token</string>
    <string name="otp">OTP</string>
    <string name="daviplata">Create TRX Daviplata</string>
    <string name="daviplata_confirm">ConfirmTRX daviplata</string>
    <string name="safetypay">Create TRX Safetypay</string>
    <string name="urlResponsePointer">URL response pointer</string>
    <string name="methodConfirmationConfirmation">Method Confirmation</string>
</resources>