<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/customer_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/customer_list" />
        <item
            android:id="@+id/customer_create"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/customer_create" />
        <item
            android:id="@+id/customer_detail"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/customer_detail" />
        <item
            android:id="@+id/customer_delete_token"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/customer_delete_token" />
        <item
            android:id="@+id/customer_add_token_default"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/customer_add_token_Default" />
        <item
            android:id="@+id/customer_add_token"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/customer_add_token" />
        <item
            android:id="@+id/plans_create"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/plans_create" />
        <item
            android:id="@+id/plans_detail"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/plans_detail" />
        <item
            android:id="@+id/plans_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/plans_list" />
        <item
            android:id="@+id/subscriptions_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/subscriptions_list" />
        <item
            android:id="@+id/subscriptions_create"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/subscriptions_create" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>