<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.epaycosdk.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/customer_list"
        android:name="com.example.epaycosdk.ui.CustomerListFragment"
        android:label="@string/customer_list"
        tools:layout="@layout/fragment_customer_list" />
    <fragment
        android:id="@+id/customer_create"
        android:name="com.example.epaycosdk.ui.customer.CreateCustomerFragment"
        android:label="@string/customer_create"
        tools:layout="@layout/fragment_create_customer" />
    <fragment
        android:id="@+id/customer_detail"
        android:name="com.example.epaycosdk.ui.customer.CustomerDetailFragment"
        android:label="@string/customer_detail"
        tools:layout="@layout/customer_detail_fragment" />
    <fragment
        android:id="@+id/customer_delete_token"
        android:name="com.example.epaycosdk.ui.customer.DeleteTokenFragment"
        android:label="@string/customer_delete_token"
        tools:layout="@layout/delete_token_fragment" />
    <fragment
        android:id="@+id/customer_add_token_default_token"
        android:name="com.example.epaycosdk.ui.customer.AddNewDefaultTokenkFragment"
        android:label="@string/customer_add_token_Default"
        tools:layout="@layout/add_new_default_tokenk_fragment" />
    <fragment
        android:id="@+id/customer_add_token_default"
        android:name="com.example.epaycosdk.ui.customer.AddNewToken"
        android:label="@string/customer_add_token"
        tools:layout="@layout/add_new_token_fragment" />
    <fragment
        android:id="@+id/plans_list"
        android:name="com.example.epaycosdk.ui.PlanListFragment"
        android:label="@string/plans_list"
        tools:layout="@layout/fragment_plan_list" />

    <fragment
        android:id="@+id/subscriptions_list"
        android:name="com.example.epaycosdk.ui.SubscriptionListFragment"
        android:label="@string/subscriptions_list"
        tools:layout="@layout/fragment_subscription_list" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.epaycosdk.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.epaycosdk.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>