<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.safetypay.SafetypayFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/EditTextCash"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="cash"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextEndDate"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/endDate"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextCash"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextDocType"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/docType"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextEndDate"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextDocument"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/document"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextDocType"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextName"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/Name"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextTypePerson"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextLastName"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/LastName"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextName"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextEmail"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/email"
                    android:inputType="textEmailSubject"
                    app:layout_constraintTop_toTopOf="@+id/EditTextLastName"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextInvoice"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/invoice"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextEmail"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextDescription"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/description"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextInvoice"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextValue"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/value"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextDescription"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextTax"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/tax"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextValue"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextTaxBase"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/taxBase"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextTax"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextIco"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/ico"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextTaxBase"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextPhone"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/phone"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextIco"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextCurrency"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/Currency"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextPhone"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextCountry"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/country"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextCurrency"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextUrlResponse"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/urlResponse"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextCountry"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextUrlResponsePointer"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/urlResponsePointer"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextUrlResponse"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextUrlConfirmation"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/urlConfirmation"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextUrlResponsePointer"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextMethodConfirmation"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/methodConfirmation"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextUrlConfirmation"
                    tools:layout_editor_absoluteX="1dp" />


                <EditText
                    android:id="@+id/EditTextCity"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/city"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextMethodConfirmation"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextAddress"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/address"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextCity"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextIP"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/ip"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextAddress"
                    tools:layout_editor_absoluteX="1dp" />

                <EditText
                    android:id="@+id/EditTextIndCountry"
                    android:layout_width="409dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:hint="@string/indCountry"
                    android:inputType="textPersonName"
                    app:layout_constraintTop_toTopOf="@+id/EditTextIP"
                    tools:layout_editor_absoluteX="1dp" />

                <Button
                    android:id="@+id/ButtonSendFeedback"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:onClick="sendFeedback"
                    android:text="@string/enviar"
                    app:layout_constraintTop_toBottomOf="@+id/EditTextIndCountry"
                    tools:layout_editor_absoluteX="8dp"/>


                <TextView
                    android:id="@+id/result"
                    android:layout_width="397dp"
                    android:layout_height="356dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ButtonSendFeedback"
                    app:layout_constraintVertical_bias="0.0" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>