<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.customer.AddNewDefaultTokenkFragment">

    <EditText
        android:id="@+id/EditTextCustomerId"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/customerId"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/EditTextTokenId"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/TokenId"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/EditTextCustomerId"
        tools:layout_editor_absoluteX="1dp"/>

    <EditText
        android:id="@+id/EditTextFranchise"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/franchise"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/EditTextTokenId"
        tools:layout_editor_absoluteX="1dp"/>

    <EditText
        android:id="@+id/EditTextMask"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/mask"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/EditTextFranchise"
        tools:layout_editor_absoluteX="0dp"/>

    <Button
        android:id="@+id/ButtonSendFeedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="sendFeedback"
        android:text="@string/enviar"
        app:layout_constraintTop_toBottomOf="@+id/EditTextMask"
        tools:layout_editor_absoluteX="8dp"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="397dp"
        android:layout_height="356dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSendFeedback"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>